--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,8 +9,7 @@ body {
     border: none;
     resize: none;
     color: #000000;
-    border-left: 1px solid black;
-    padding: 10px;
+    padding: 4px 10px;
   }
   
   .jumbotron {
@@ -19,6 +18,11 @@ body {
     color: black;
     border-radius: 0;
     border-bottom: 10px solid black;
+  }
+  ul.event-group {
+    min-height: 75px;
+    margin: 0;
+    list-style-type: none;
   }
   
   .description{
@@ -33,13 +37,14 @@ body {
   .row {
     white-space: pre-wrap;
     height: 80px;
-    border-top: 1px solid white;;
+    border-top: 1px solid white;
   }
   
   .hour {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
+    padding-top: 15px;
   }
   
   .past {
@@ -57,15 +62,12 @@ body {
     color: white;
   }
   
-  .saveBtn {
+  .save-delete {
     border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     background-color: #06AED5;
     color: white;
-  }
-  
-  .saveBtn i:hover {
-    font-size: 20px;
-    transition: all .3s ease-in-out;
+    text-align: center;
+    padding-top: 25px;
   }
